# onenote-hotkeys

./: .gitignore  Cargo.toml
src/: main.rs
